# zyndeck

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Cargo.toml  README.md  docker-compose.yaml
.cargo/: config.toml
scripts/: fetch-pdfium.sh
zyndeck-api/: Cargo.toml  README.md
zyndeck-api/src/: auth.rs  error.rs  game.rs  lib.rs  login.rs  main.rs  openapi.rs  pagination.rs  password.rs  state.rs  user.rs
zyndeck-api/tests/: api.rs
zyndeck-cli/: Cargo.toml  README.md
zyndeck-cli/src/: main.rs
zyndeck-core/: Cargo.toml  README.md
zyndeck-core/src/: game.rs  ingestion_job.rs  language_code.rs  lib.rs  localized_string.rs  role.rs  user.rs
zyndeck-db/: Cargo.toml  README.md  build.rs
zyndeck-db/migrations/: 0001_enable_pgvector.sql  0001_initial_schema.sql  0002_create_user.sql  0002_ingestion_chunks.sql  0003_create_game.sql  0004_create_ingestion_job.sql  0005_create_ingestion_step_run.sql  0006_add_aborted_step_run_status.sql  0007_ingestion_job_inputs_and_transcript.sql  0008_add_ingestion_job_mode.sql  0009_notify_ingestion_job_created.sql
zyndeck-db/queries/game/: count.sql  create.sql  delete.sql  find_by_id.sql  list.sql  update.sql
zyndeck-db/queries/ingestion_chunk/: delete_by_job.sql  find_by_job.sql  insert.sql
zyndeck-db/queries/ingestion_chunk_embedding/: upsert.sql
zyndeck-db/queries/ingestion_job/: create.sql  find_by_id.sql  find_unprocessed_ids.sql  lock.sql  pending_run_job_ids.sql  update_step.sql
zyndeck-db/queries/ingestion_step_run/: abort.sql  begin.sql  claim.sql  enqueue.sql  find_by_id.sql  find_latest.sql  finish.sql
zyndeck-db/queries/ingestion_transcript/: find.sql  upsert.sql
zyndeck-db/queries/user/: count.sql  create.sql  delete.sql  find_by_id.sql  find_by_username.sql  find_credentials_by_username.sql  list.sql  update.sql  upsert.sql
zyndeck-db/src/: config.rs  error.rs  game.rs  ingestion_chunk.rs  ingestion_job.rs  ingestion_step_run.rs  ingestion_transcript.rs  lib.rs  user.rs
zyndeck-db/tests/: game_repository.rs  ingestion_chunk_repository.rs  ingestion_job_repository.rs  ingestion_step_run_repository.rs  ingestion_transcript_repository.rs  ingestion_transitions.rs  migrations.rs  user_repository.rs
zyndeck-ingester/: Cargo.toml  README.md
zyndeck-ingester/examples/: explore.rs
zyndeck-ingester/src/: chunk.rs  document.rs  embed.rs  lib.rs  main.rs  pdf.rs
