[workspace]
resolver = "3"
members = ["zyndeck-ingester"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com>"]
repository = "https://github.com/leroyguillaume/zyndeck"

# Shared dependency versions, pulled into each crate with `foo.workspace = true`.
[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
