[package]
name = "zyndeck-api"
version = "0.1.0"
description = "Zyndeck HTTP API: CRUD for games and users, with role-based access control."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aide.workspace = true
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
zyndeck-core.workspace = true
zyndeck-db.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
zyndeck-db = { workspace = true, features = ["mock"] }
