[package]
name = "zyndeck-db"
version = "0.1.0"
description = "Zyndeck database access layer: connection pool and migrations."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

# Administrative binary: drops and recreates the database, then applies the
# migrations. The crate's main product is the library above; this is a thin
# operator tool, so it lives behind its own `[[bin]]` rather than as a default.
[[bin]]
name = "zyndeck-db-tool"
path = "src/bin/zyndeck-db-tool.rs"

[features]
# Generates `mockall` doubles of the repository traits (MockGameRepository,
# MockUserRepository) for use by downstream crates' tests.
mock = ["dep:mockall"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
mockall = { workspace = true, optional = true }
pgvector.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zyndeck-core.workspace = true
