[package]
name = "zyndeck-ingester"
version = "0.1.0"
description = "Zyndeck service that ingests game rules so they can be validated against and queried by the LLM."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
